Fixed some initial styles of BrandsSkeleton for too small media.

--- a/src/components/Skeleton/BrandsSkeleton/styles.module.css
+++ b/src/components/Skeleton/BrandsSkeleton/styles.module.css
@@ -10,14 +10,14 @@
 .container {
   max-width: 480px;
   margin: 0 auto;
-  padding: 0 31px;
+  padding: 0 24px;
 }
 
 .subtitle {
   max-width: 250px;
   height: 14.993px;
   border-radius: 14px;
-  margin-bottom: 20px;
+  margin-bottom: 34.99px;
 }
 
 .titles {
@@ -31,12 +31,8 @@
   margin: 0 auto 2px;
 }
 
-.title:nth-last-child(2) {
-  max-width: 220px;
-}
-
 .title:last-child {
-  max-width: 260px;
+  max-width: 130px;
   margin-bottom: 0;
 }
 
@@ -70,6 +66,12 @@
   );
   background-size: 400% 400%;
   animation: pulse 1.2s ease-in-out infinite;
+}
+
+@media screen and (min-width: 320px) {
+  .container {
+    padding: 0 31px;
+  }
 }
 
 @media screen and (min-width: 336px) {
